--- a/webpack5Book/myWebpack/package.json
+++ b/webpack5Book/myWebpack/package.json
@@ -11,10 +11,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "^6.7.1",
+    "less-loader": "^11.0.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   },
   "dependencies": {
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "webpack-dev-server": "^4.10.0"
   }
 }
