--- a/webpack5Book/myWebpack/package.json
+++ b/webpack5Book/myWebpack/package.json
@@ -5,12 +5,16 @@
   "main": "webpack.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack",
+    "start": "node ./dist/test.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.18.13",
+    "@babel/preset-env": "^7.18.10",
+    "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
     "less-loader": "^11.0.0",
     "style-loader": "^3.3.1",
