--- a/webpack5Book/project/4.vue-ssr/package.json
+++ b/webpack5Book/project/4.vue-ssr/package.json
@@ -15,15 +15,19 @@
     "style-loader": "^3.3.1",
     "vue-loader": "^17.0.0",
     "vue-style-loader": "^4.1.3",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0",
+    "webpack": "^5.68.0",
+    "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.10.1",
     "webpack-manifest-plugin": "^5.0.0",
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "@vue/server-renderer": "^3.2.31",
+    "@vue/server-renderer": "^3.2.39",
+    "crypto-browserify": "^3.12.0",
     "express": "^4.18.1",
+    "node-polyfill-webpack-plugin": "^2.0.1",
+    "path-browserify": "^1.0.1",
+    "stream-browserify": "^3.0.0",
     "vue": "^3.2.31"
   }
 }
